manifests/frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: courses-frontend
  namespace: courses
spec:
  replicas: 1
  selector:
    matchLabels:
      app: courses-frontend
  template:
    metadata:
      labels:
        app: courses-frontend
    spec:
      containers:
        - name: courses-frontend
          image: jeffrygonzalez/beginning-services-frontend:v1.1
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
